# debtor

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.agent/rules/: specify-rules.md
.specify/.cache/: prereq.json
.specify/memory/: constitution.md
debtor-app/: Cargo.toml
debtor-app/src/: main.rs
debtor-domain/: Cargo.toml
debtor-domain/src/: currency.rs  lib.rs  traits.rs
debtor-domain/src/debts/: balance.rs  mod.rs  simplify.rs
debtor-domain/src/expenses/: mod.rs  splitting.rs
debtor-domain/src/groups/: mod.rs
debtor-infra/: Cargo.toml
debtor-infra/src/: lib.rs
debtor-infra/src/auth/: mod.rs
debtor-infra/src/db/: mod.rs
debtor-infra/src/db/repos/: mod.rs
debtor-infra/src/exchange_rates/: frankfurter.rs  mod.rs
debtor-infra/tests/: migrations.rs
debtor-web/: Cargo.toml
debtor-web/src/: lib.rs  router.rs  state.rs
debtor-web/src/handlers/: mod.rs
debtor-web/src/middleware/: mod.rs
debtor-web/src/templates/: mod.rs
debtor-web/src/templates/partials/: mod.rs
migrations/: .gitkeep  20260223000001_init_schema.sql  20260517000001_create_groups.up.sql  20260517000002_create_participants.up.sql  20260517000003_create_group_members.down.sql  20260517000003_create_group_members.up.sql  20260517000004_create_spendings.down.sql  20260517000004_create_spendings.up.sql  20260517000005_create_spending_payers.down.sql  20260517000005_create_spending_payers.up.sql  20260517000006_create_spending_shares.down.sql  20260517000006_create_spending_shares.up.sql  Cargo.toml
migrations/src/: lib.rs  m20260223_000001_init_schema.rs  main.rs
specs/001-shared-expenses/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-shared-expenses/checklists/: requirements.md
specs/001-shared-expenses/contracts/: exchange-rate-provider.md  http-interface.md
specs/002-add-dotenvy-env/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-dotenvy-env/checklists/: requirements.md
specs/002-add-dotenvy-env/contracts/: README.md
specs/003-complete-main-http-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/003-complete-main-http-server/checklists/: requirements.md
specs/003-complete-main-http-server/contracts/: endpoints.md
specs/004-seaorm-to-sqlx/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-seaorm-to-sqlx/checklists/: requirements.md
src/: lib.rs  main.rs
src/app/: config.rs  mod.rs  state.rs
src/auth/: auth_state_repo.rs  login_service.rs  middleware.rs  mod.rs  password.rs  session_repo.rs
src/db/: bootstrap.rs  connection.rs  mod.rs
src/db/entities/: admin_users.rs  auth_state.rs  exchange_rates.rs  expense_shares.rs  expenses.rs  groups.rs  members.rs  mod.rs  sessions.rs
src/debts/: balance_calculator.rs  debt_summary_service.rs  mod.rs  simplify.rs
src/exchange_rates/: frankfurter_client.rs  mod.rs  rate_repo.rs  rate_service.rs
src/expenses/: expense_repo.rs  expense_service.rs  mod.rs  share_repo.rs  share_splitter.rs
src/groups/: group_repo.rs  group_service.rs  member_repo.rs  member_service.rs  mod.rs
src/web/: csrf.rs  error.rs  mod.rs  router.rs
src/web/handlers/: auth_handlers.rs  dashboard_handler.rs  debt_handlers.rs  expense_handlers.rs  group_handlers.rs  mod.rs
src/web/templates/: layout.html
src/web/templates/auth/: login.html
src/web/templates/debts/: summary.html
src/web/templates/expenses/: list.html
src/web/templates/expenses/partials/: expense_form.html
src/web/templates/groups/: detail.html
src/web/templates/groups/partials/: member_list.html
static/css/: app.css
tests/: contract.rs  integration.rs  unit.rs
tests/contract/: test_auth_contract.rs  test_debts_contract.rs  test_exchange_provider_contract.rs  test_expenses_contract.rs  test_groups_contract.rs  test_members_contract.rs  test_no_settlement_contract.rs
tests/integration/: test_auth_redirect_matrix.rs  test_csrf_contract.rs  test_db_bootstrap.rs  test_debt_summary.rs  test_debt_summary_rounding_order.rs  test_debt_summary_zero_balances.rs  test_end_to_end_journey.rs  test_exchange_cache_day_rollover.rs  test_exchange_cache_reuse.rs  test_exchange_fallback.rs  test_exchange_fetch_frequency.rs  test_exchange_fetch_on_demand.rs  test_exchange_no_cache_failure.rs  test_expense_entry_performance.rs  test_expenses_create.rs  test_expenses_delete.rs  test_expenses_update.rs  test_foundation_auth_redirects.rs  test_foundation_routing.rs  test_groups_create.rs  test_groups_currency_recalc.rs  test_groups_update_delete.rs  test_login_csrf.rs  test_login_failure.rs  test_login_lockout.rs  test_login_performance.rs  test_login_success.rs  test_logout.rs  test_members_crud.rs  test_no_custom_js.rs  test_security_headers_and_csrf.rs  test_semantic_html.rs  test_session_expiry_boundary.rs  test_session_sliding_expiry.rs  test_summary_performance.rs
tests/support/: mod.rs
tests/unit/: test_balance_calculator.rs  test_debt_simplify.rs  test_dotenv.rs  test_session_cookie_policy.rs  test_share_splitter.rs
