[package]
name = "debtor"
description = "Application binary — composition root"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[workspace]
resolver = "3"
members = [
    "debtor-domain",
    "debtor-infra",
    "debtor-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
debtor-domain = { path = "debtor-domain" }
debtor-infra = { path = "debtor-infra" }
debtor-web = { path = "debtor-web" }
axum = "0.8"
axum-htmx = "0.8"
tower-sessions = "0.14"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
askama = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"
uuid = { version = "1", features = ["v4"] }

[dependencies]
debtor-domain = { workspace = true }
debtor-infra = { workspace = true }
debtor-web = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-sessions = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
unwrap_used = "warn"
expect_used = "warn"

[workspace.lints.rust]
missing_docs = "warn"
