[package]
name = "debtor-app"
description = "Application binary — composition root"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "debtor"
path = "src/main.rs"

[dependencies]
debtor-domain = { path = "../debtor-domain" }
debtor-infra = { path = "../debtor-infra" }
debtor-web = { path = "../debtor-web" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-sessions = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
