[package]
name = "debtor-domain"
description = "Pure domain logic for debtor — zero I/O dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
