[package]
name = "debtor-infra"
description = "Infrastructure adapters — SQLx repositories, HTTP clients, auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
debtor-domain = { path = "../debtor-domain" }
rust_decimal = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true, features = ["migrate"] }

[lints]
workspace = true
