[package]
name = "debtor-migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "debtor_migration"
path = "src/lib.rs"

[[bin]]
name = "debtor-migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration = { version = "1", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite"
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
